src/test/deca/context/invalid/expr_cast_float_to_boolean.deca
// Test of the rule (3.39) : can't cast float to boolean.

{
	boolean var1;
	float var2;
	var1 = (boolean)(var2);
}

// Résultat :
//# a
